Document list style AJAX Redirect change

--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -40,7 +40,7 @@
 				<div>
 					<label class="control-label">Documents</label>
 
-<ul class="small list-unstyled">
+<ul class="small list-unstyled list-documents">
 
 <li><a target="_new" href="https://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1452901462920_pyf2WZ7HqNdR5VjQLJKzbdL9gvPqjKnwp0tMNjlyq4Y32Qsq7C82!1143392206!1452899079229.pdf"><span class='glyphicon glyphicon-file'></span> Cover and Citation</a></li>
 <li><a target="_new" href="https://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1452901506174_pyf2WZ7HqNdR5VjQLJKzbdL9gvPqjKnwp0tMNjlyq4Y32Qsq7C82!1143392206!1452899079229.pdf"><span class='glyphicon glyphicon-file'></span> Document Map and List of Appendices</a></li>
