--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -754,3 +754,8 @@ pre {
 h3.firstHeading {
 	margin-top: 5px;
 }
+
+.list-documents li {
+    border-top: 1px solid $border-grey;
+    padding: 2px 0;
+}
