--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -73,7 +73,7 @@
 				</div>
 
 				<div>
-					<label class="control-label">Appendicies</label>
+					<label class="control-label">Appendices</label>
 
 					<ul class="small list-unstyled list-documents">
 						<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39701/1453147632796_X8ZMWd1CxQjhYm4w56yHt12jXz9NnX7MPWdThqyLfpfZGGvkdQB5!1143392206!1453143298801.pdf">Appx3-A_Ajax Geochemical Characterization Study</a></li>
