--- a/modules/projects/client/views/project-partials/modal-add-public-comment.html
+++ b/modules/projects/client/views/project-partials/modal-add-public-comment.html
@@ -3,17 +3,16 @@
 </div>
 
 <div class="modal-body" ng-if="publicComment.step === 1">
-	<h3>Public Comment Policies, Disclosure and Use of Personal Information for Submissions</h3>
 
-	<p>Comments submitted to the Environmental Assessment Office (EAO), either online, by mail or by fax, will be published on the <a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_home.html" target="_new">EAO Electronic Project Information Centre (ePIC)</a>.</p>
+	<h3>Submitting Your Comments: How It Works</h3>
+	<div class="small form-group">
+		<p>Comments submitted to the Environmental Assessment Office (EAO) will be published online.</p>
+		<p>EAO publishes all accepted comments within seven days of receipt. Comments are not accepted if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy [PDF]</a>.</p>
+		<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
+		<p>You may provide your name and city/town when making a comment, but in order to have your name displayed with your comment you must select the 'Show my name and location on the public site' option.</p>
+		<p>All hyperlinks in comments will be converted to plain text. All attachments will be limited to 5MB.</p>
 
-	<p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy [PDF]</a>.</p>
-
-	<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
-
-	<p>Although you may provide your name and city/town when making a comment, in order to have your name displayed with your comment you must select the 'Show my name and location on the public site' option.</p>
-
-	<p>All links/URLs in a comment will be removed as we cannot guarantee that the link will not break during the time the comment is publicly available in the EAO Project Information Centre. To include content from another web site, please attach it as a PDF to your comment.</p>
+	</div>
 
 </div>
 
@@ -67,9 +66,10 @@
 	<div class="modal-body" ng-if="publicComment.step === 3">
 		<h3>Thank you for your comment</h3>
 		<label class="control-label">What happens next?</label>
-		<p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy [PDF]</a>.</p>
-
-		<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
+		<div class="form-group small">
+			<p>Comments submitted to the Environmental Assessment Office (EAO) will be published online</p>
+			<p>EAO publishes all accepted comments within seven days of receipt. Comments are not accepted if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy [PDF]</a>.</p>
+		</div>
 	</div>
 
 
