--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -200,6 +200,13 @@ button:focus, a:focus {
 	border-bottom: 1px solid #ddd;
 }
 
+.panel-sub-title {
+	border-top: 1px solid #ddd;
+	margin: 0;
+	font-size: 1.4em;
+	padding-bottom: 0;	
+}
+
 .panel-sub-heading {
 	background-color: #f5f5f5;
 	padding: 10px;
@@ -758,4 +765,8 @@ h3.firstHeading {
 .list-documents li {
     border-top: 1px solid $border-grey;
     padding: 2px 0;
+}
+
+.list-documents li:first-child {
+    border-top: none
 }
