--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -59,7 +59,8 @@
 					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453143544288_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch03_Detailed Project Description</a></li>
 					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453143580190_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch04_Assessment Process</a></li>
 					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453143649333_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch05_Effects Assessment Methodology</a></li>
-					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453143765260_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch06_Assessment of Potential Environmental Effects</a></li>
+					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453143765260_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch06_Assessment of Potential Environmental Effects - Part 1</a></li>
+					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453308398077_v5m1WfwCZ9hq9JT5QQy4H9SghRskvTxtH6STQTGHmpLG4g6ZC2xT!-2016153214!1453305954585.pdf"><span class="glyphicon glyphicon-file"></span> Ch06_Assessment of Potential Environmental Effects - Part 2</a></li>
 					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453143765260_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch07_Assessment of Potential Economic Effects</a></li>
 					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453144410413_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch08_Assessment of Potential Social Effects</a></li>
 					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453144922246_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch09_Assessment of Potential Heritage Effects</a></li>
@@ -73,14 +74,22 @@
 					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453146159939_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch17_Federal Environmental Assessment Requirements</a></li>
 					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/d39700/1453146217337_QzJ9WdsMpRJvp1GtL2JJmYjYw0jptTxFgrx6SyVKDJxRgQFvZ9Jq!1143392206!1453141196524.pdf"><span class="glyphicon glyphicon-file"></span> Ch18_Summary and Conclusions</a></li>
 				</ul>
-				<ul class="small list-unstyled list-documents" ng-show="toggleProject.docs">
-					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_project_doc_list_362_r_app.html"><span class="glyphicon glyphicon-folder-open"></span>&nbsp; Application Appendices</a></li>
-				</ul>
+
 				<ul class="small list-unstyled list-documents" ng-show="toggleProject.docs">
 					<li><a href ng-click="toggleProject.docs = !toggleProject.docs"><em>Hide Application Files</em></a></li>
 				</ul>
 				<ul class="small list-unstyled list-documents" ng-show="!toggleProject.docs">
 					<li><a href ng-click="toggleProject.docs = !toggleProject.docs"><em>View Application Files</em></a></li>
+				</ul>
+			</div>
+
+			<div>
+				<h3 class="panel-sub-title panel-body">Application Appendices</h3>
+			</div>			
+
+			<div class='panel-body'>
+				<ul class="small list-unstyled list-documents">
+					<li><a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_project_doc_list_362_r_app.html">View Appendices [opens in new window]</a></li>
 				</ul>
 
 <!-- 				<div>
