SCSS manual merge

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -4,6 +4,7 @@
 
 /* ----- Colors ----- */
 $header-blue:				#141a41;
+$header-grey:				#666666;
 $navbar-blue:				#154681;
 $color-sample2:               #AAAAAA;
 $brand-primary:			#337ab7;
@@ -14,13 +15,15 @@ $brand-danger:				#d9534f;
 $link-light:				#337ab7;
 $link-dark:				#23527c;
 $border-grey:				#dddddd;
-
+$off-white:				#f4f4f4;
+$danger-text:				#a94442;
 
 // -------------------------
 // Bootstrap Overrides
 // -------------------------
 
 /* ----- Typography ----- */
+$font-family-heading: 'Nunito', sans-serif;
 $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 
 
@@ -98,6 +101,17 @@ html {
 	background: linear-gradient(to bottom,  #606c88 0%,#003366 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606c88', endColorstr='#003366',GradientType=0 ); /* IE6-9 */
 	min-height: 100%;
+
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#606c88+0,fcfcfc+0,f2f2f2+100 */
+	background: #606c88; /* Old browsers */
+	background: -moz-linear-gradient(top,  #606c88 0%, #fcfcfc 0%, #f2f2f2 100%); /* FF3.6-15 */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#606c88), color-stop(0%,#fcfcfc), color-stop(100%,#f2f2f2)); /* Chrome4-9,Safari4-5 */
+	background: -webkit-linear-gradient(top,  #606c88 0%,#fcfcfc 0%,#f2f2f2 100%); /* Chrome10-25,Safari5.1-6 */
+	background: -o-linear-gradient(top,  #606c88 0%,#fcfcfc 0%,#f2f2f2 100%); /* Opera 11.10-11.50 */
+	background: -ms-linear-gradient(top,  #606c88 0%,#fcfcfc 0%,#f2f2f2 100%); /* IE10 preview */
+	background: linear-gradient(to bottom,  #606c88 0%,#fcfcfc 0%,#f2f2f2 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606c88', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
+
 }
 
 a:hover {
@@ -117,9 +131,15 @@ a:hover {
 /* Workaround for unwanted route changes due to empty href attributes - see http://angular-ui.github.io/bootstrap/ */
 .nav, .pagination, .carousel, .panel-title a, .clickable { cursor: pointer; }
 
+h1,h2,h3,h4,h5,h6 {
+	font-weight: 400;
+	font-family: $font-family-heading;
+	letter-spacing: -0.01em;
+}
+
 h1.page-title {
-	padding: 0 15px;
-	color: #ffffff;
+	padding: 0;
+	color: $header-grey;
 	margin-top: 0;
 	margin-bottom: 20px;
 }
@@ -174,6 +194,19 @@ button:focus, a:focus {
 	padding-bottom: 0;
 }
 
+.panel-header h1.panel-title {
+	font-size: 2em;
+	padding: 15px;
+	border-bottom: 1px solid #ddd;
+}
+
+.panel-sub-title {
+	border-top: 1px solid #ddd;
+	margin: 0;
+	font-size: 1.4em;
+	padding-bottom: 0;	
+}
+
 .panel-sub-heading {
 	background-color: #f5f5f5;
 	padding: 10px;
@@ -192,7 +225,7 @@ button:focus, a:focus {
 a.return-link {
 	text-decoration: none;
 	font-size: 14px;
-	color: #fff;
+	color: #333333;
 }
 
 a.return-link:hover {
@@ -205,7 +238,7 @@ a.return-link:hover {
 }
 
 h3.activity-title {
-	color: #fff;
+	color: #33333;
 	margin-top: 0;
 }
 
@@ -241,11 +274,11 @@ h3 .small .label {
 
 .panel-sort li {
 	font-size: 80%;
-	color: #fff;
+	color: $header-grey;
 }
 .panel-sort li a {
 	padding: 0 5px 0 3px;
-	color: #fff;
+	color: $header-grey;
 }
 .panel-sort li:before {
 	content: '|';	
@@ -334,7 +367,7 @@ th .progress-bar {
 }
 .concern-heading,
 .concern-heading * {
-	color: #f4f4f4 !important;
+	color: #333333 !important;
 }
 
 .panel-project-summary h3 {
@@ -396,7 +429,7 @@ a.control-label:hover,
 }
 
 
-.well > h3 {
+.well > h3, .panel-body h3:first-child {
 	margin-top: 0;
 	margin-bottom: 20px;
 }
@@ -405,7 +438,9 @@ a.control-label:hover,
 	margin-bottom: 15px;
 }
 
-
+h3.panel-title {
+	margin-bottom: 0;
+}
 nav {
 	cursor: default;
 }
@@ -455,6 +490,11 @@ nav {
     box-shadow: 3px 3px 20px rgba(0,0,0,0.5);
 }
 
+.text-danger {
+	color: $danger-text !important;
+}
+
+
 .navbar-custom .navbar-nav > li > a {
     color: $navbar-blue;
 }
@@ -486,7 +526,7 @@ nav {
 	position: absolute;
 	top: -10px;
 	left: -8px;
-	color: #ffffff;
+	color: $header-grey;
 	-webkit-transition: all 0.2s ease;
 	-moz-transition: all 0.2s ease;
 	-o-transition: all 0.2s ease;
@@ -494,7 +534,7 @@ nav {
 }
 .panel-toggle:hover {
 	font-size: 24px;
-	color: #ffffff;
+	color: $header-grey;
 	top: -20px;
 	left: -14px;
 	-webkit-transition: all 0.2s ease;
@@ -667,6 +707,9 @@ nav {
 .no-wrap {
 	white-space: nowrap;
 }
+.wrap {
+	white-space: normal !important;
+}
 
 .document-vetting li:first-child,
 .no-top-border {
@@ -705,4 +748,25 @@ pre {
 	overflow-x: hidden;
 	max-height: 400px;
 	display: block;
+}
+
+.footer .panel {
+	margin-bottom: 0;
+}
+
+.footer {
+	margin-bottom: 10px;
+}
+
+h3.firstHeading {
+	margin-top: 5px;
+}
+
+.list-documents li {
+    border-top: 1px solid $border-grey;
+    padding: 2px 0;
+}
+
+.list-documents li:first-child {
+    border-top: none
 }
